feat: Configure Android release signing and metadata
Updates the Android application configuration for release builds.

- Adds release signing configuration to `build.gradle.kts`, loading credentials from `key.properties`.
- Enables code minification and resource shrinking for release builds.
- Updates the Android application label to "BMI AI".
- Updates the project description in `pubspec.yaml`.

--- a/flutter_launcher_icons.yaml
+++ b/flutter_launcher_icons.yaml
@@ -1,8 +1,9 @@
 # flutter pub run flutter_launcher_icons
 flutter_launcher_icons:
-  image_path: "assets/icon/icon.png"
+  # Use the project's launcher icon (existing in pubspec.yaml assets)
+  image_path: "assets/launcher_icon.png"
 
-  android: "launcher_icon"
+  android: true
   # image_path_android: "assets/icon/icon.png"
   min_sdk_android: 21 # android min sdk min:16, default 21
   # adaptive_icon_background: "assets/icon/background.png"
@@ -10,7 +11,7 @@ flutter_launcher_icons:
   # adaptive_icon_foreground_inset: 16
   # adaptive_icon_monochrome: "assets/icon/monochrome.png"
 
-  ios: true
+  ios: false
   # image_path_ios: "assets/icon/icon.png"
   remove_alpha_ios: true
   # image_path_ios_dark_transparent: "assets/icon/icon_dark.png"
@@ -20,15 +21,15 @@ flutter_launcher_icons:
 
   web:
     generate: true
-    image_path: "path/to/image.png"
-    background_color: "#hexcode"
-    theme_color: "#hexcode"
+    image_path: "assets/launcher_icon.png"
+    background_color: "#000000"
+    theme_color: "#000000"
 
   windows:
-    generate: true
-    image_path: "path/to/image.png"
-    icon_size: 48 # min:48, max:256, default: 48
+    generate: false
+    # image_path: "assets/launcher_icon.png"
+    # icon_size: 48 # min:48, max:256, default: 48
 
   macos:
-    generate: true
-    image_path: "path/to/image.png"
+    generate: false
+    # image_path: "assets/launcher_icon.png"
