--- a/android/local.properties
+++ b/android/local.properties
@@ -1,5 +1,5 @@
 sdk.dir=D:\\SDK\\android
-flutter.sdk=D:\\SDK\\flutter
-flutter.buildMode=release
-flutter.versionName=1.0.0
-flutter.versionCode=1
+flutter.sdk=C:\\Users\\sadik220810\\fvm\\default
+flutter.buildMode=debug
+flutter.versionName=1.0.2
+flutter.versionCode=2
