feat: Configure Android release signing and metadata
Updates the Android application configuration for release builds.

- Adds release signing configuration to `build.gradle.kts`, loading credentials from `key.properties`.
- Enables code minification and resource shrinking for release builds.
- Updates the Android application label to "BMI AI".
- Updates the project description in `pubspec.yaml`.

--- a/android/local.properties
+++ b/android/local.properties
@@ -1,5 +1,5 @@
 sdk.dir=D:\\SDK\\android
-flutter.sdk=C:\\Users\\sadik220810\\fvm\\default
-flutter.buildMode=debug
+flutter.sdk=D:\\SDK\\flutter
+flutter.buildMode=release
 flutter.versionName=1.0.2
 flutter.versionCode=2
